Extract Different Component From the WellForm Component as Refactor Step
Extract Several Components extracted from the WellForm Component to
Further clean the project look. these component are:

.DeclineValue.Vue
.WellInformation.Vue
.ProductionChart.Vue
.EconomicDetails.Vue
.ProductionProfile.Vue
.TechnicalParameters.Vue
.WorkOverComplexity.Vue

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<!--					<div id="chartContainer" style="height: 370px; width: 100%;"></div>-->
 <html>
 	<head>
 		<title>Juli-MatPro</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
 			.text-warning{
@@ -21,6 +21,10 @@
 			body {
 				font-family: Roboto,serif;
 				color: #4d4d4d;
+			}
+			hr {
+				margin-top: 3px;
+				margin-bottom: 3px;
 			}
 		</style>
 	</head>
@@ -89,8 +93,8 @@
 <!--			<script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.6.0/vuex.min.js"></script>-->
 
 		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
-			<script src="assets/js/app.js"></script>
-			<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+		<script src="assets/js/app.js"></script>
+<!--			<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>-->
 <!--			<script src="assets/js/juli-matpro-main_2.js"></script>-->
 
 	</body>
